name:              yql
version:           0.0.0
synopsis:          A YQL engine to execute Open Data Tables
description:       A YQL engine that provides a Haskell backbone
                   library for the YQL specification, and a Javascript
                   host environment to execute Open Data Tables.
homepage:          https://github.com/fabianbergmark/YQL
category:          Web
author:            Fabian Bergmark
maintainer:        fabian.bergmark@gmail.com
license:           BSD2
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

extra-source-files: LICENSE

source-repository head
  type:     git
  location: https://github.com/fabianbergmark/YQL.git

library
    default-language: Haskell2010

    hs-source-dirs: src/

    exposed-modules: Data.YQL
                     Data.YQL.Cache
                     Data.YQL.Context
                     Data.YQL.Crypto
                     Data.YQL.Response
                     Data.YQL.Rest
                     Data.YQL.Result
                     Data.YQL.Y
                     Language.JavaScript.Host.YQL
                     Language.JavaScript.Host.YQL.Inputs
                     Language.JavaScript.Host.YQL.Rest
                     Language.JavaScript.Host.YQL.Response
                     Language.JavaScript.Host.YQL.Y
                     YQL
                     YQL.Date
                     YQL.Crypto
                     YQL.Rest
                     YQL.Y

    ghc-options: -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-do-bind -fno-warn-unused-matches

    extensions:

    build-depends: aeson                == 0.*
                 , base                 == 4.*
                 , base64-bytestring    == 1.*
                 , bytestring           == 0.*
                 , containers           == 0.*
                 , cryptohash           == 0.*
                 , data-default         == 0.*
                 , ecma262              == 0.*
                 , exceptions           == 0.*
                 , hslogger             == 1.*
                 , http-conduit         == 2.*
                 , http-types           == 0.*
                 , lens                 == 4.*
                 , opendatatable        == 0.*
                 , parsec               == 3.*
                 , SHA                  == 1.*
                 , text                 == 1.*
                 , transformers         == 0.*
                 , unordered-containers == 0.*
                 , uri-template         == 0.*
                 , utf8-string          == 0.*
                 , uuid                 == 1.*
                 , vector               == 0.*
                 , zlib                 == 0.*

executable yql
    default-language: Haskell2010

    main-is: Main.hs

    ghc-options: -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches

    other-modules: Main
    build-depends: base          == 4.*
                 , yql           == 0.0.0
                 , containers    == 0.*
                 , ecma262       == 0.*
                 , exceptions    == 0.*
                 , opendatatable == 0.*
                 , hxt           == 9.*
